// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServicesBlock /> renders properly 1`] = `
<div>
  <section
    class="jsx-1405412835 container"
  >
    <div
      class="jsx-1405412835 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Serviços
      </h1>
      <ul
        class="jsx-1405412835"
      >
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Design
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Web design
            </p>
            <p
              class="jsx-1405412835"
            >
              - Cartazes & flyers
            </p>
            <p
              class="jsx-1405412835"
            >
              - Cartão de contacto
            </p>
            <p
              class="jsx-1405412835"
            >
              - Templates para Social Media
            </p>
            <p
              class="jsx-1405412835"
            >
              - Menus
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Social Media
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Criação de Conteúdo
            </p>
            <p
              class="jsx-1405412835"
            >
              - Análises de mercado
            </p>
            <p
              class="jsx-1405412835"
            >
              - Estratégia e gestão de redes sociais
            </p>
            <p
              class="jsx-1405412835"
            >
              - Promoção de posts
            </p>
            <p
              class="jsx-1405412835"
            >
              - Consultoria
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Digital
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Campanhas paid search (google ads)
            </p>
            <p
              class="jsx-1405412835"
            >
              - Gestão de plataformas de opinião
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-1405412835 container"
  >
    <div
      class="jsx-1405412835 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Services
      </h1>
      <ul
        class="jsx-1405412835"
      >
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Design
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Web design
            </p>
            <p
              class="jsx-1405412835"
            >
              - Outdoors & flyers
            </p>
            <p
              class="jsx-1405412835"
            >
              - Contact card
            </p>
            <p
              class="jsx-1405412835"
            >
              - Social Media templates
            </p>
            <p
              class="jsx-1405412835"
            >
              - Menus
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Social Media
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Content creation
            </p>
            <p
              class="jsx-1405412835"
            >
              - Market analysis
            </p>
            <p
              class="jsx-1405412835"
            >
              - Social Media Strategy
            </p>
            <p
              class="jsx-1405412835"
            >
              - Paid social
            </p>
            <p
              class="jsx-1405412835"
            >
              - Consulting
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Digital
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Paid search campaigns (google ads)
            </p>
            <p
              class="jsx-1405412835"
            >
              - Opinion platforms management
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;
